// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert /> should render 1`] = `
.c0 {
  background: hsla(193,100%,35%,0.09);
  padding: 12px 16px;
  border-radius: 4px;
  border-color: hsla(193,100%,35%,0.32);
  border-width: 1px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  max-width: 584px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c3 {
  border: none;
  cursor: pointer;
  padding: 0;
  border-radius: 2px;
  background: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: hsla(216,27%,36%,1);
  -webkit-transition-property: color,box-shadow;
  transition-property: color,box-shadow;
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c3:hover {
  color: hsla(217,18%,45%,1);
}

.c3:focus {
  outline: none;
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
  color: hsla(216,33%,29%,1);
}

.c3:active {
  color: hsla(216,33%,29%,1);
}

.c1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  padding-right: 4px;
}

.c2 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

<div>
  <div
    class="c0"
    role="status"
  >
    <svg
      aria-hidden="true"
      fill="none"
      height="20px"
      viewBox="0 0 20 20"
      width="20px"
    >
      <path
        d="M10.0002 5.83331C10.4604 5.83331 10.8335 6.20641 10.8335 6.66665V9.99998C10.8335 10.4602 10.4604 10.8333 10.0002 10.8333C9.53992 10.8333 9.16683 10.4602 9.16683 9.99998V6.66665C9.16683 6.20641 9.53992 5.83331 10.0002 5.83331Z"
        fill="hsla(193, 100%, 35%, 1)"
      />
      <path
        d="M10.0002 14.1666C10.4604 14.1666 10.8335 13.7935 10.8335 13.3333C10.8335 12.8731 10.4604 12.5 10.0002 12.5C9.53992 12.5 9.16683 12.8731 9.16683 13.3333C9.16683 13.7935 9.53992 14.1666 10.0002 14.1666Z"
        fill="hsla(193, 100%, 35%, 1)"
      />
      <path
        clip-rule="evenodd"
        d="M5.96091 1.07739C6.11171 0.926587 6.32004 0.833313 6.55016 0.833313H13.4502C13.6712 0.833313 13.8831 0.92111 14.0394 1.07739L18.9228 5.96072C19.079 6.117 19.1668 6.32897 19.1668 6.54998V13.45C19.1668 13.671 19.079 13.883 18.9228 14.0392L14.0394 18.9226C13.8831 19.0788 13.6712 19.1666 13.4502 19.1666H6.55016C6.32915 19.1666 6.11719 19.0788 5.96091 18.9226L1.07757 14.0392C0.921294 13.883 0.833496 13.671 0.833496 13.45V6.54998C0.833496 6.32897 0.921293 6.117 1.07757 5.96072L5.96091 1.07739ZM6.89534 2.49998L2.50016 6.89516V13.1048L6.89534 17.5H13.105L17.5002 13.1048V6.89516L13.105 2.49998H6.89534Z"
        fill="hsla(193, 100%, 35%, 1)"
        fill-rule="evenodd"
      />
    </svg>
    <div
      class="c1"
    >
      <p
        class="c2 Text__StyledText-wkh56f-0"
        color="surface.text.normal.lowContrast"
        font-family="text"
        font-size="100"
        font-style="normal"
        font-weight="regular"
      >
        Currently you can only accept payments in international currencies using PayPal.
      </p>
    </div>
    <button
      aria-label="Dismiss alert"
      class="c3"
    >
      <svg
        aria-hidden="true"
        fill="none"
        height="20px"
        viewBox="0 0 24 24"
        width="20px"
      >
        <path
          d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Alert /> should render negative intent and borderless 1`] = `
.c0 {
  background: hsla(9,91%,56%,0.09);
  padding: 12px 16px;
  border-radius: 0px;
  border-color: hsla(9,91%,56%,0.32);
  border-width: 0px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  max-width: auto;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c3 {
  border: none;
  cursor: pointer;
  padding: 0;
  border-radius: 2px;
  background: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: hsla(216,27%,36%,1);
  -webkit-transition-property: color,box-shadow;
  transition-property: color,box-shadow;
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c3:hover {
  color: hsla(217,18%,45%,1);
}

.c3:focus {
  outline: none;
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
  color: hsla(216,33%,29%,1);
}

.c3:active {
  color: hsla(216,33%,29%,1);
}

.c1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  padding-right: 4px;
}

.c2 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

<div>
  <div
    class="c0"
    role="alert"
  >
    <svg
      aria-hidden="true"
      fill="none"
      height="20px"
      viewBox="0 0 20 20"
      width="20px"
    >
      <path
        d="M10.0002 5.83331C10.4604 5.83331 10.8335 6.20641 10.8335 6.66665V9.99998C10.8335 10.4602 10.4604 10.8333 10.0002 10.8333C9.53992 10.8333 9.16683 10.4602 9.16683 9.99998V6.66665C9.16683 6.20641 9.53992 5.83331 10.0002 5.83331Z"
        fill="hsla(8, 73%, 47%, 1)"
      />
      <path
        d="M10.0002 14.1666C10.4604 14.1666 10.8335 13.7935 10.8335 13.3333C10.8335 12.8731 10.4604 12.5 10.0002 12.5C9.53992 12.5 9.16683 12.8731 9.16683 13.3333C9.16683 13.7935 9.53992 14.1666 10.0002 14.1666Z"
        fill="hsla(8, 73%, 47%, 1)"
      />
      <path
        clip-rule="evenodd"
        d="M5.96091 1.07739C6.11171 0.926587 6.32004 0.833313 6.55016 0.833313H13.4502C13.6712 0.833313 13.8831 0.92111 14.0394 1.07739L18.9228 5.96072C19.079 6.117 19.1668 6.32897 19.1668 6.54998V13.45C19.1668 13.671 19.079 13.883 18.9228 14.0392L14.0394 18.9226C13.8831 19.0788 13.6712 19.1666 13.4502 19.1666H6.55016C6.32915 19.1666 6.11719 19.0788 5.96091 18.9226L1.07757 14.0392C0.921294 13.883 0.833496 13.671 0.833496 13.45V6.54998C0.833496 6.32897 0.921293 6.117 1.07757 5.96072L5.96091 1.07739ZM6.89534 2.49998L2.50016 6.89516V13.1048L6.89534 17.5H13.105L17.5002 13.1048V6.89516L13.105 2.49998H6.89534Z"
        fill="hsla(8, 73%, 47%, 1)"
        fill-rule="evenodd"
      />
    </svg>
    <div
      class="c1"
    >
      <p
        class="c2 Text__StyledText-wkh56f-0"
        color="surface.text.normal.lowContrast"
        font-family="text"
        font-size="100"
        font-style="normal"
        font-weight="regular"
      >
        Currently you can only accept payments in international currencies using PayPal.
      </p>
    </div>
    <button
      aria-label="Dismiss alert"
      class="c3"
    >
      <svg
        aria-hidden="true"
        fill="none"
        height="20px"
        viewBox="0 0 24 24"
        width="20px"
      >
        <path
          d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Alert /> should render positive intent and full width 1`] = `
.c0 {
  background: hsla(155,100%,31%,0.09);
  padding: 12px 16px;
  border-radius: 4px;
  border-color: hsla(155,100%,31%,0.32);
  border-width: 1px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  max-width: auto;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c3 {
  border: none;
  cursor: pointer;
  padding: 0;
  border-radius: 2px;
  background: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: hsla(216,27%,36%,1);
  -webkit-transition-property: color,box-shadow;
  transition-property: color,box-shadow;
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c3:hover {
  color: hsla(217,18%,45%,1);
}

.c3:focus {
  outline: none;
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
  color: hsla(216,33%,29%,1);
}

.c3:active {
  color: hsla(216,33%,29%,1);
}

.c1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  padding-right: 4px;
}

.c2 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

<div>
  <div
    class="c0"
    role="status"
  >
    <svg
      aria-hidden="true"
      fill="none"
      height="20px"
      viewBox="0 0 20 20"
      width="20px"
    >
      <g
        clip-path="url(#clip0_16177_16057)"
      >
        <path
          d="M3.46542 5.95567C5.62348 3.43075 9.18525 2.62601 12.2192 3.97787C12.6396 4.16518 13.1323 3.97624 13.3196 3.55584C13.5069 3.13545 13.3179 2.6428 12.8976 2.45549C9.18937 0.803218 4.8361 1.78678 2.19847 4.8728C-0.439156 7.95882 -0.732808 12.4122 1.47676 15.8178C3.68633 19.2234 7.87276 20.7701 11.7658 19.6191C15.6588 18.468 18.3311 14.893 18.3334 10.8333V10.0583C18.3334 9.5981 17.9603 9.22501 17.5001 9.22501C17.0398 9.22501 16.6667 9.5981 16.6667 10.0583V10.8329C16.6648 14.1544 14.4784 17.079 11.2932 18.0208C8.10803 18.9626 4.68276 17.6971 2.87493 14.9107C1.06711 12.1242 1.30737 8.4806 3.46542 5.95567Z"
          fill="hsla(160, 100%, 26%, 1)"
        />
        <path
          d="M18.9226 3.9226C19.2481 3.59716 19.2481 3.06952 18.9226 2.74409C18.5972 2.41865 18.0696 2.41865 17.7441 2.74409L9.16672 11.3215L7.25597 9.41075C6.93054 9.08532 6.4029 9.08532 6.07746 9.41075C5.75202 9.73619 5.75202 10.2638 6.07746 10.5893L8.57746 13.0893C8.9029 13.4147 9.43054 13.4147 9.75597 13.0893L18.9226 3.9226Z"
          fill="hsla(160, 100%, 26%, 1)"
        />
      </g>
      <defs>
        <clippath
          id="clip0_16177_16057"
        >
          <rect
            fill="white"
            height="20"
            width="20"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="c1"
    >
      <p
        class="c2 Text__StyledText-wkh56f-0"
        color="surface.text.normal.lowContrast"
        font-family="text"
        font-size="100"
        font-style="normal"
        font-weight="regular"
      >
        Currently you can only accept payments in international currencies using PayPal.
      </p>
    </div>
    <button
      aria-label="Dismiss alert"
      class="c3"
    >
      <svg
        aria-hidden="true"
        fill="none"
        height="20px"
        viewBox="0 0 24 24"
        width="20px"
      >
        <path
          d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
</div>
`;
